# siglip-aesthetics-scoring-macos

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: python-app.yml
docs/superpowers/plans/: 2026-03-22-image-classifier.md
docs/superpowers/specs/: 2026-03-22-image-classifier-design.md
src/image_classifier/: classifier.py  database.py  main.py  metadata.py
tests/: test_classifier.py  test_database.py  test_main.py  test_metadata.py  test_workflow.py
