[project]
name = "image-classifier"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "aesthetic-predictor-v2-5",
    "torch>=2.0",
    "Pillow",
    "rich",
]

[project.scripts]
classify = "image_classifier.main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/image_classifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=image_classifier --cov-report=term-missing"

[tool.coverage.run]
source = ["src/image_classifier"]
